@@ -3,6 +3,7 @@
 	* Add SECURITY.md to EXTRA_DIST
 	* Remove mmap support for hashsum calculation
 	* Add warning if rule tree is empty
+	* Update --help message
 
 2023-01-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Limit hashsum calculation of growing files to stat size
